# ML2ML

./: .gitignore  API-Interfaces.md  Architecture-Decisions-Log.md  Artifact-Store-Adapter-Guide.md  AuthZ-Capability-Matrix.md  Backend-Adapter-Guide.md  Backend-Feature-Matrix.md  Build-and-CI-Matrix.md  Canonical-CBOR-Profile.md  Checkpoint-Schema.md  Code-Generation-Mapping.md  Coding-Standards.md  Compatibility-Test-Matrix.md  Config-Schema.md  Conformance-Harness-Guide.md  Contributing-Workflow.md  Coverage-Targets.md  Data-Lineage.md  Data-NextBatch.md  Data-Structures.md  Debugging-Playbook.md  Dependency-Lock-Policy.md  Deployment-Runbook.md  Determinism-Profiles.md  Deterministic-RNG-Implementation-Guide.md  Developer-Setup.md  Developer-Troubleshooting-FAQ.md  DifferentialPrivacy-Apply.md  Digest-Catalog.md  Dockerfile  Environment-Manifest.md  Error-Codes.md  Evaluation-Harness.md  Execution-Certificate.md  Experiment-Tracking.md  Failure-Injection-Scenarios.md  Fixtures-and-Golden-Data.md  Implementation-Backlog.md  Implementation-Roadmap.md  Model-Registry.md  (+45 more)
contracts/: capability_catalog.cbor  catalog-manifest.json  digest_catalog.cbor  error_codes.cbor  error_codes.json  interface_hash.json  operator_registry.cbor  operator_registry.json  operator_registry_source.json  schema_catalog.cbor  vectors_catalog.cbor
docs/: BRAND.md  HELLO_CORE_NEXT_STEPS.md  INTERPRETATION_LOG.md  START-HERE.md  VERIFY.md  WEEKLY_REVIEW_TEMPLATE.md
document_guidelines/: EQC_ECOSYSTEM.md  EQC_GUIDELINES.md
ecosystem/: tooling-manifest.yaml
scripts/: run_hello_core.py
(+191 files in other folders)
